# service/goods/api/goods/v1/goods_grpc.pb.go
@@ -1,4 +1,8 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.2.0
+// - protoc             v3.19.4
+// source: goods/v1/goods.proto
 
 package v1
 
@@ -21,6 +25,11 @@ type GoodsClient interface {
 	CreateCategory(ctx context.Context, in *CategoryInfoRequest, opts ...grpc.CallOption) (*CategoryInfoResponse, error)
 	CreateGoodsType(ctx context.Context, in *GoodsTypeRequest, opts ...grpc.CallOption) (*GoodsTypeResponse, error)
 	CreateGoodsSpecification(ctx context.Context, in *SpecificationRequest, opts ...grpc.CallOption) (*SpecificationResponse, error)
+	// 商品参数属性分组名
+	CreateAttrGroup(ctx context.Context, in *AttrGroupRequest, opts ...grpc.CallOption) (*AttrGroupResponse, error)
+	// 商品参数属性名和值
+	CreateAttrValue(ctx context.Context, in *AttrValueRequest, opts ...grpc.CallOption) (*AttrResponse, error)
+	CreateGoods(ctx context.Context, in *CreateGoodsRequest, opts ...grpc.CallOption) (*CreateGoodsResponse, error)
 }
 
 type goodsClient struct {
@@ -58,6 +67,33 @@ func (c *goodsClient) CreateGoodsSpecification(ctx context.Context, in *Specific
 	return out, nil
 }
 
+func (c *goodsClient) CreateAttrGroup(ctx context.Context, in *AttrGroupRequest, opts ...grpc.CallOption) (*AttrGroupResponse, error) {
+	out := new(AttrGroupResponse)
+	err := c.cc.Invoke(ctx, "/goods.v1.Goods/CreateAttrGroup", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *goodsClient) CreateAttrValue(ctx context.Context, in *AttrValueRequest, opts ...grpc.CallOption) (*AttrResponse, error) {
+	out := new(AttrResponse)
+	err := c.cc.Invoke(ctx, "/goods.v1.Goods/CreateAttrValue", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *goodsClient) CreateGoods(ctx context.Context, in *CreateGoodsRequest, opts ...grpc.CallOption) (*CreateGoodsResponse, error) {
+	out := new(CreateGoodsResponse)
+	err := c.cc.Invoke(ctx, "/goods.v1.Goods/CreateGoods", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // GoodsServer is the server API for Goods service.
 // All implementations must embed UnimplementedGoodsServer
 // for forward compatibility
@@ -65,6 +101,11 @@ type GoodsServer interface {
 	CreateCategory(context.Context, *CategoryInfoRequest) (*CategoryInfoResponse, error)
 	CreateGoodsType(context.Context, *GoodsTypeRequest) (*GoodsTypeResponse, error)
 	CreateGoodsSpecification(context.Context, *SpecificationRequest) (*SpecificationResponse, error)
+	// 商品参数属性分组名
+	CreateAttrGroup(context.Context, *AttrGroupRequest) (*AttrGroupResponse, error)
+	// 商品参数属性名和值
+	CreateAttrValue(context.Context, *AttrValueRequest) (*AttrResponse, error)
+	CreateGoods(context.Context, *CreateGoodsRequest) (*CreateGoodsResponse, error)
 	mustEmbedUnimplementedGoodsServer()
 }
 
@@ -80,6 +121,15 @@ func (UnimplementedGoodsServer) CreateGoodsType(context.Context, *GoodsTypeReque
 }
 func (UnimplementedGoodsServer) CreateGoodsSpecification(context.Context, *SpecificationRequest) (*SpecificationResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateGoodsSpecification not implemented")
+}
+func (UnimplementedGoodsServer) CreateAttrGroup(context.Context, *AttrGroupRequest) (*AttrGroupResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateAttrGroup not implemented")
+}
+func (UnimplementedGoodsServer) CreateAttrValue(context.Context, *AttrValueRequest) (*AttrResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateAttrValue not implemented")
+}
+func (UnimplementedGoodsServer) CreateGoods(context.Context, *CreateGoodsRequest) (*CreateGoodsResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateGoods not implemented")
 }
 func (UnimplementedGoodsServer) mustEmbedUnimplementedGoodsServer() {}
 
@@ -148,6 +198,60 @@ func _Goods_CreateGoodsSpecification_Handler(srv interface{}, ctx context.Contex
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Goods_CreateAttrGroup_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AttrGroupRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GoodsServer).CreateAttrGroup(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/goods.v1.Goods/CreateAttrGroup",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GoodsServer).CreateAttrGroup(ctx, req.(*AttrGroupRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Goods_CreateAttrValue_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AttrValueRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GoodsServer).CreateAttrValue(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/goods.v1.Goods/CreateAttrValue",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GoodsServer).CreateAttrValue(ctx, req.(*AttrValueRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Goods_CreateGoods_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateGoodsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GoodsServer).CreateGoods(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/goods.v1.Goods/CreateGoods",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GoodsServer).CreateGoods(ctx, req.(*CreateGoodsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Goods_ServiceDesc is the grpc.ServiceDesc for Goods service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -166,6 +270,18 @@ var Goods_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateGoodsSpecification",
 			Handler:    _Goods_CreateGoodsSpecification_Handler,
+		},
+		{
+			MethodName: "CreateAttrGroup",
+			Handler:    _Goods_CreateAttrGroup_Handler,
+		},
+		{
+			MethodName: "CreateAttrValue",
+			Handler:    _Goods_CreateAttrValue_Handler,
+		},
+		{
+			MethodName: "CreateGoods",
+			Handler:    _Goods_CreateGoods_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
